--- a/exampleSite/public/index.html
+++ b/exampleSite/public/index.html
@@ -87,7 +87,15 @@
 
 
             <div class="e-content">
-              <p><div class="embed embed-16by9"><iframe width="200" height="113" src="https://www.youtube.com/embed/qEGFqw1GCw0?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen title="Lake Waikaremoana - New Zealand Great Walk - Shot in 4k DJI Osmo Pocket"></iframe></div></p>
+              <p><div class="embed embed-16by9">
+      <iframe
+        src="https://www.youtube.com/embed/qEGFqw1GCw0"
+        title="YouTube video"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </div></p>
 
             </div>
             &rarr;
@@ -144,7 +152,12 @@
 
 
             <div class="e-content">
-              <p><iframe style="border-radius: 12px" width="100%" height="352" title="Spotify Embed: Powerage" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" src="https://open.spotify.com/embed/album/4iMaHsHqTg3rwOtRa5wEbm?si=ClLETg0UQwyAiC_RdfMrhw&utm_source=oembed"></iframe></p>
+              <p><iframe
+      style="width:100%; height: 152px; border: 0;"
+      src="https://open.spotify.com/embed/album/4iMaHsHqTg3rwOtRa5wEbm"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"
+    ></iframe></p>
 
             </div>
             &rarr;
